// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Common connector tests (React InstantSearch) > FrequentlyBoughtTogether connector common tests > options > returns recommendations > 
        <ul>
          <li>
            1
          </li>
          <li>
            2
          </li>
        </ul>
       1`] = `
<ul>
  <li>
    1
  </li>
  <li>
    2
  </li>
</ul>
`;

exports[`Common connector tests (React InstantSearch) > FrequentlyBoughtTogether connector common tests > options > returns recommendations > <ul /> 1`] = `<ul />`;

exports[`Common connector tests (React InstantSearch) > FrequentlyBoughtTogether connector common tests > options > throws when not passing the \`objectIDs\` option 1`] = `
[Error: The \`objectIDs\` option is required.

See documentation: https://www.algolia.com/doc/api-reference/widgets/frequently-bought-together/js/#connector]
`;

exports[`Common connector tests (React InstantSearch) > FrequentlyBoughtTogether connector common tests > options > transforms recommendations > 
        <ul>
          <li>
            (1)
          </li>
          <li>
            (2)
          </li>
        </ul>
       1`] = `
<ul>
  <li>
    (1)
  </li>
  <li>
    (2)
  </li>
</ul>
`;

exports[`Common connector tests (React InstantSearch) > FrequentlyBoughtTogether connector common tests > options > transforms recommendations > <ul /> 1`] = `<ul />`;

exports[`Common connector tests (React InstantSearch) > RelatedProducts connector common tests > options > returns recommendations > 
        <ul>
          <li>
            1
          </li>
          <li>
            2
          </li>
        </ul>
       1`] = `
<ul>
  <li>
    1
  </li>
  <li>
    2
  </li>
</ul>
`;

exports[`Common connector tests (React InstantSearch) > RelatedProducts connector common tests > options > returns recommendations > <ul /> 1`] = `<ul />`;

exports[`Common connector tests (React InstantSearch) > RelatedProducts connector common tests > options > throws when not passing the \`objectIDs\` option 1`] = `
[Error: The \`objectIDs\` option is required.

See documentation: https://www.algolia.com/doc/api-reference/widgets/related-products/js/#connector]
`;

exports[`Common connector tests (React InstantSearch) > RelatedProducts connector common tests > options > transforms recommendations > 
        <ul>
          <li>
            (1)
          </li>
          <li>
            (2)
          </li>
        </ul>
       1`] = `
<ul>
  <li>
    (1)
  </li>
  <li>
    (2)
  </li>
</ul>
`;

exports[`Common connector tests (React InstantSearch) > RelatedProducts connector common tests > options > transforms recommendations > <ul /> 1`] = `<ul />`;

exports[`Common connector tests (React InstantSearch) > TrendingItems connector common tests > options > returns recommendations > 
        <ul>
          <li>
            1
          </li>
          <li>
            2
          </li>
        </ul>
       1`] = `
<ul>
  <li>
    1
  </li>
  <li>
    2
  </li>
</ul>
`;

exports[`Common connector tests (React InstantSearch) > TrendingItems connector common tests > options > returns recommendations > <ul /> 1`] = `<ul />`;

exports[`Common connector tests (React InstantSearch) > TrendingItems connector common tests > options > transforms recommendations > 
        <ul>
          <li>
            (1)
          </li>
          <li>
            (2)
          </li>
        </ul>
       1`] = `
<ul>
  <li>
    (1)
  </li>
  <li>
    (2)
  </li>
</ul>
`;

exports[`Common connector tests (React InstantSearch) > TrendingItems connector common tests > options > transforms recommendations > <ul /> 1`] = `<ul />`;
